# session-recording-editor

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  scalewidget.cpp  scalewidget.h  sessionrecording.cpp  sessionrecording.h
